# rpools

./: .gitignore  .gitmodules  .travis.yml  README.md  generate_obj_alloc_html.py  plot_elapsed_time.py  time_alloc_benchmarks.py
benchmarks/: generate_alloc_file.py  sample_main.txt  sample_new.txt
benchmarks/elapsed_time/: CMakeLists.txt  Utility.h  bench_normal_order.cpp  bench_random2_order.cpp  bench_random_order.cpp  bench_specified_order.cpp  bench_worst_order.cpp
benchmarks/memory_usage/: bench_custom.cpp
debug/: table.css
debug/js/: select.js
doc/: Doxyfile
examples/allocators/: CMakeLists.txt  SomeObject.hpp  global_linked_pool_example.cpp  linked_pool_example.cpp  linked_pool_example2.cpp
examples/custom_new/: example.cpp
examples/llvm/: instructions.md
include/rpools/allocators/: GlobalLinkedPool.hpp  LinkedPool.hpp  PoolHeaderG.hpp
include/rpools/custom_new/: custom_new_delete.hpp  custom_new_delete_debug.hpp
include/rpools/tools/: LMLock.hpp  mallocator.hpp  proc_utils.hpp
llvm/: CustomNewDelete.cpp  CustomNewDeleteDebug.cpp  common.hpp
pool_impl/: CMakeLists.txt  README.md  bitpool_main.cpp  generate_obj_alloc_html.py  graphs.py  heap_usage.cpp  inject_custom_new  linkedpool_main.cpp  main.cpp  plot_elapsed_time.py  plot_linked_tests.py  plot_memory_usage.py  plot_object_snapshots.py  reg_vs_linked.cpp  reg_vs_linked.py  time_alloc_benchmarks.py
pool_impl/benchmarks/: CMakeLists.txt  generate_alloc_file.py  sample_alloc.txt  sample_main.txt  sample_new.txt  sample_struct.txt
pool_impl/benchmarks/elapsed_time/: CMakeLists.txt  Utility.h  bench_normal_order.cpp  bench_random2_order.cpp  bench_random_order.cpp  bench_specified_order.cpp  bench_worst_order.cpp
pool_impl/benchmarks/linked_pool/: CMakeLists.txt  Utility.h  bench_normal_order.cpp  bench_random2_order.cpp  bench_random_order.cpp  bench_specified_order.cpp  bench_worst_order.cpp
pool_impl/benchmarks/memory_usage/: CMakeLists.txt  bench_linked.cpp  bench_linked_extra_var.cpp  bench_linked_set.cpp  bench_linked_uset.cpp  bench_mem_pool.cpp  bench_normal.cpp  bench_object_pool.cpp
pool_impl/debug/: base.html  package.json  table.css
pool_impl/debug/js/: select.js
pool_impl/doc/: Doxyfile
pool_impl/examples/: CMakeLists.txt
pool_impl/examples/allocators/: linked_pool_example.cpp  linked_pool_example2.cpp
pool_impl/examples/custom_new/: CMakeLists.txt
pool_impl/include/custom_new/: custom_new_delete.hpp
pool_impl/include/custom_operators/debug/: custom_new_delete_debug.hpp
pool_impl/include/pool_allocators/: GlobalLinkedPool.hpp  LinkedPool.hpp  LinkedPool3.hpp  MemoryPool.h  NSGlobalLinkedPool.hpp  PoolHeaderG.hpp
pool_impl/include/rpools/allocators/: GlobalLinkedPool.hpp  LinkedPool.hpp  LinkedPool3.hpp  MemoryPool.h  NSGlobalLinkedPool.hpp  Node.hpp
pool_impl/include/rpools/custom_new/: custom_new_delete.hpp
pool_impl/include/rpools/tools/: FreeDeleter.hpp  LMLock.hpp  pool_utils.hpp
pool_impl/include/tools/: LMLock.hpp
pool_impl/llvm/: CMakeLists.txt  CustomNewDelete.cpp  CustomNewDeleteDebug.cpp  common.cpp  common.h
pool_impl/src/: AllocCollector.cpp  AllocCollector.h  CMakeLists.txt  CustomAlloc.h  Tools.h  custom_new_delete.cpp  custom_new_delete.h  custom_new_delete2.cpp  custom_new_delete2.h  custom_new_delete_debug.cpp  custom_new_delete_debug.h
pool_impl/src/allocators/: CMakeLists.txt  GlobalLinkedPool.cpp  NSGlobalLinkedPool.cpp
pool_impl/src/avltree/: CMakeLists.txt  PoolNode.h  avl_utils.c  avl_utils.h  avltree.c  avltree.h
pool_impl/src/bit_pool/: BitPool.h
pool_impl/src/custom_new/: AllocCollector.cpp  AllocatedObject.hpp  GlobalPools.cpp  GlobalPools.hpp  custom_new_delete.cpp  custom_new_delete_debug.cpp
pool_impl/src/custom_operators/: CMakeLists.txt
pool_impl/src/custom_operators/custom_new_delete_v1/: CMakeLists.txt  GlobalPools.cpp  GlobalPools.h  GlobalPools.hpp  custom_new_delete.cpp  custom_new_delete.h  custom_new_delete.hpp
pool_impl/src/custom_operators/custom_new_delete_v2/: custom_new_delete.cpp  custom_new_delete2.h  custom_new_delete2.hpp
pool_impl/src/custom_operators/debug/: CMakeLists.txt  custom_new_delete_debug.cpp  custom_new_delete_debug.h
pool_impl/src/linked_pool/: GlobalLinkedPool.h  GlobalLinkedPool2.h  LinkedPool.h  LinkedPool2.h  LinkedPool3.h  LinkedPool4.h
pool_impl/src/pool_allocators/: CMakeLists.txt  GlobalLinkedPool.cpp  GlobalLinkedPool.h  GlobalLinkedPool.hpp  LinkedPool.h  LinkedPool.hpp  LinkedPool3.h  LinkedPool3.hpp  MemoryPool.h  NSGlobalLinkedPool.cpp  NSGlobalLinkedPool.h  NSGlobalLinkedPool.hpp  Node.h  Node.hpp  PoolHeaderG.h  PoolHeaderG.hpp
pool_impl/src/tools/: AllocCollector.cpp  AllocCollector.h  AllocatedObject.h  AllocatedObject.hpp  LMLock.cpp  light_lock.h  mallocator.h  proc_utils.hpp
pool_impl/test_linked_pool/: CMakeLists.txt  Utility.h  test_normal_order.cpp  test_random2_order.cpp  test_random_order.cpp  test_specified_order.cpp  test_worst_order.cpp
pool_impl/test_linked_pool/unit_test/: test_linked_pool.cpp
pool_impl/tests/unit_test/: CMakeLists.txt  TestObject.h  TestObject2.h  test_custom_new_delete.cpp  test_custom_new_delete2.cpp  test_global_linked_pool.cpp  test_linked_pool.cpp  test_linked_pool2.cpp  test_linked_pool3.cpp  test_linked_pool4.cpp
src/avltree/: avltree.c
src/custom_new/: AllocCollector.hpp  CMakeLists.txt  GlobalPools.hpp
src/tools/: LMLock.cpp
test_proj/: .gitignore  CMakeLists.txt  README.md  benchmark_Obj2.cpp  graphs.py  main.cpp
test_proj/src/: AllocFile.cpp  AllocFile.h  Obj1.cpp  Obj1.h  Obj2.cpp  Obj2.h  Obj3.cpp  Obj3.h  SomeObject.cpp  SomeObject.h  SomeObject2.cpp  SomeObject2.h  SomeObject3.cpp  SomeObject3.h
tests/unit_test/: CMakeLists.txt  TestObject.h  TestObject2.h  test_global_linked_pool.cpp  test_linked_pool.cpp
