add_executable(bench_normal bench_normal_order.cpp)
target_link_libraries(bench_normal avltree)
add_executable(bench_worst bench_worst_order.cpp)
target_link_libraries(bench_worst avltree)
add_executable(bench_random bench_random_order.cpp)
target_link_libraries(bench_random avltree)
add_executable(bench_specified bench_specified_order.cpp)
target_link_libraries(bench_specified avltree)
add_executable(bench_random2 bench_random2_order.cpp)
target_link_libraries(bench_random2 avltree)
