add_executable(bench_mem_normal bench_normal.cpp)
target_link_libraries(bench_mem_normal linkedpools)
add_executable(bench_mem_linked_extra_var bench_linked_extra_var.cpp)
target_link_libraries(bench_mem_linked_extra_var linkedpools)
add_executable(bench_mem_pool bench_mem_pool.cpp)
add_executable(bench_mem_custom bench_custom.cpp)
target_link_libraries(bench_mem_custom customnew)
if (Boost_FOUND)
  add_executable(bench_object_pool bench_object_pool.cpp)
endif()
